--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #007f3f;
+      background-color: #00523f;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>Hello World of good people.</h2>
+    <h2>Hello Fucking Wolrd.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
